# THG-final-project

./: .gitignore  README.md  main.aux  main.bbl  main.blg  main.out  main.py  main.tex  pyproject.toml  references.bib
.github/workflows/: tests.yml
configs/: report_grid.yaml  research_grid.example.yaml  smoke_grid.yaml  stress_grid.yaml
results/csv/: run_grid.csv  run_single.csv
results/reports/: nearest_centroid_planner.json  nearest_centroid_planner_eval.json  summary.csv  summary.json
results/test_tmp/learned_planner/: planner.json  trace.csv
results/test_tmp/learned_planner_hybrid/: trace.csv
src/tsann/: __init__.py  ann_global.py  ann_hybrid.py  ann_partitioned.py  config.py  dataset.py  distance.py  filters.py  generators.py  metrics.py  oracle_exact.py  planner.py  types.py
src/tsann/experiments/: evaluate_planner.py  plot_results.py  run_ablation.py  run_grid.py  run_single.py  summarize.py  train_planner.py
src/tsann/indexes/: base.py  brute_force.py  hnsw_wrapper.py
src/tsann/partitioning/: __init__.py  routing.py  scalar_buckets.py  time_buckets.py
tests/: test_edge_cases.py  test_filters.py  test_global_filter.py  test_hybrid_planner.py  test_learned_planner.py  test_oracle.py  test_partitioned_search.py  test_partitioning.py  test_reproducibility.py  test_smoke_config_planner.py  test_updates.py
