[project]
name = "temporal-subset-ann"
version = "0.1.0"
description = "Research prototype for temporal subset filtered approximate nearest neighbor search."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "matplotlib",
  "pyyaml",
  "tqdm"
]

[project.optional-dependencies]
dev = ["pytest", "hypothesis"]
hnsw = ["hnswlib"]
analysis = ["pandas"]
all = ["pytest", "hypothesis", "hnswlib", "pandas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
